fixed z-index issue placing the frame in the wrong layer

--- a/src/scss/Frame.scss
+++ b/src/scss/Frame.scss
@@ -28,7 +28,7 @@
 }
 
 .frame {
-  z-index: 4;
+  z-index: 1;
   display: flex;
   flex-direction: column;
   width: 25rem;
